--- a/Assets/style.css
+++ b/Assets/style.css
@@ -1,371 +1,56 @@
+/* Create a CSS variable at Root of Document to Use throughout Style Sheet */
+:root {
+  --primary-color: black;
+  --secondary-color: #F6F0E5;
+  --third-color: #000879;
+  --fourth-color: #f9f295;
+}
+
 * {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
 
 body {
-    color:darkslategray;
-    font-family:Georgia, 'Times New Roman', Times, serif
+  color: black;
+  font-family:serif;
 }
 
-/* apply to styles to <header> */
+/* Apply Styles to Header */
 header {
-    padding: 20px 35px;
-    background-color:darkgray;
-    display: flex;
-    justify-content: space-between;
-    flex-wrap: wrap;
-    position: -webkit-sticky;
-    position: sticky;
-    top: 0;
+padding: 20px 35px;
+background-color: var(--secondary-color);
+display: flex;
+justify-content: space-between;
+flex-wrap: wrap;
+position: -webkit-sticky;
+position: sticky;
+top: 0;
+background-image: url("Assets/Images/1.png");
+background-size: cover;
+background-position: center;
+background-attachment: fixed;
+background-position: 80%;
+z-index: 9999;
 }
 
+/* May not need - still unsure of logo in the corner */
 header h1 {
-    font-weight: bold;
-    font-size: 42px;
-    color: darkslategray;
-    margin: 0;
-    text-shadow: 0 0 15px rgba(0, 0, 0, .5);
-}
-
-header a {
-    text-decoration: dotted;
-    color: darkslategray;
+  font-weight: bold;
+  font-size: 32px;
+  color: white;
+  margin: 0;
 }
 
 header nav {
-    margin: 10px 0;
+  margin: 7px 0;
 }
 
 header nav ul {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-between;
-    align-items: center;
-    list-style: none;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-evenly;
+  align-items: center;
+  list-style: none;
 }
-
-header nav ul li a {
-    padding: 15px 15px;
-    font-weight: lighter;
-    font-size: 2vw;
-    text-shadow: 0 0 15px rgba (0, 0, 0, .5);
-}
-
-header nav ul li a:hover {
-    background-color: darkslategray;
-    color: white;
-    border-radius: 15px;
-    text-shadow: none;
-}
-
-/* Footer Starts */
-footer {
-    background-color: darkgrey;
-    width: 100%;
-    padding: 40px 35px;
-    justify-content: space-between;
-    flex-wrap: wrap;
-}
-
-footer h2 {
-    color: darkslategray;
-    font-size: 20px;
-    margin: 0;
-    text-align: left;
-}
-
-/* Footer Style Ends */
-
-.digital-marketer {
-    padding: 70px;
-    background-image: url(./Images/Placeholder1.png);
-    background-size: cover;
-    background-position: center;
-    display: flex;
-    justify-content: center;
-    flex-wrap: wrap;
-    align-items: flex-start;
-    background-attachment: fixed;
-    line-height: 1.2;
-}
-
-.digital-marketer h2 {
-    font-weight: bold;
-    font-size: 38px;
-    color: darkslategray;
-    margin: 0;
-    color: black;
-    width: 100%;
-    margin: 3.5%;
-    box-shadow: 0 0 25px rgba(0, 0, 0, 0.8);
-    border-radius: 65px;
-    text-align: right;
-}
-
-/* About Me */
-
-.intro {
-    margin: 0 auto;
-    line-height: 1.7;
-    color: darkslategray;
-    width: 80%;
-    font-size: 20px;
-    text-align: center;
-}
-
-.sarah {
-    width: 100%;
-    margin: 0 auto;
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-around;
-}
-
-.sarah img {
-    width: 25%;
-}
-
-.sarah p {
-    margin: 0;
-    line-height: 1.5;
-    color: darkslategray;
-    width: 80%;
-    font-size: 20px;
-    text-align: center;
-}
-
-/* Previous Projects */
-
-.previous-projects {
-    width: 100%;
-    margin: 0 auto;
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
-}
-
-.project {
-    width: 100%;
-    margin: 0 auto;
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
-}
-
-.projects {
-    margin: 20px;
-    background: darkgrey;
-    color: darkslategray;
-    flex: 1;
-}
-
-.project h3 {
-    font-size: 28px;
-    padding: 25px;
-    line-height: 1.3;
-}
-
-.project img {
-    width:75%;
-}
-
-/* Contact Me */
-.contact {
-    background: darkslategray;
-  }
-
-  .contact h2 {
-    color: darkgrey;
-  }
-
-  .contact-info {
-    display: flex;
-    justify-content: space-between;
-    flex-wrap: wrap;
-  }
-
-  .contact-info > * {
-    flex: 1;
-    margin: 15px;
-  }
-
-
-  .contact-info div {
-    color: white;
-  }
-
-  .contact-info h3 {
-    color: darkgray;
-    font-size: 32px;
-  }
-
-  .contact-info p, .contact-info address {
-    margin: 20px 0;
-    line-height: 1.5;
-    font-size: 16px;
-    font-style: normal;
-  }
-
-  .contact-form input, .contact-form textarea {
-    border: 1px solid darkslategray;
-    display: block;
-    padding: 7px 15px;
-    font-size: 16px;
-    color: #024e76;
-    width: 100%;
-    margin-bottom: 15px;
-    margin-top: 5px;
-    border-radius: 10px;
-    background-color: rgba(255,255,255, 0.75)
-  }
-
-  .contact-input:focus {
-    background-color: darkgray;
-    outline: none;
-  }
-
-  .contact-form button {
-    width: 100%;
-    border: none;
-    background: darkgray;
-    color: darkslategray;
-    text-align: center;
-    padding: 15px 0;
-    font-size: 16px;
-    border-radius: 10px;
-  }
-
-  .contact-form button:hover {
-    color: #fce138;
-    background: #39a6b2;
-  }
-
-  .contact-info a {
-    color: #fce138;
-  }
-
-  /* Reach out styles end */
-
-  .flex-row {
-    display: flex;
-  }
-
-  /* MEDIA QUERY FOR SMALLER DESKTOP SCREENS AND SMALLER */
-  @media screen and (max-width: 980px) {
-    header {
-      padding-bottom: 0;
-      justify-content: center;
-      position: relative;
-    }
-
-    header h1 {
-      width: 100%;
-      text-align: center;
-    }
-
-    header nav ul {
-      margin-top: 20px;
-      width: 100%;
-      justify-content: center;
-    }
-
-    header nav ul li a {
-      font-size: 20px;
-    }
-
-
-    footer h2, footer div {
-      text-align: center;
-      width: 100%;
-      }
-
-      .hero-cta, .hero-form {
-        width: 100%;
-      }
-
-      .hero-cta {
-        text-align: center;
-      }
-
-      .section-title {
-        width: 80%;
-      }
-
-      .trainer {
-        flex: 0 70%;
-      }
-
-      .contact-info iframe{
-        flex: 1 100%;
-      }
-  }
-
-
-
-  /* MEDIA QUERY FOR TABLETS AND SMALLER */
-  @media screen and (max-width: 768px) {
-    section {
-      padding: 30px 15px;
-    }
-
-    .step h3 {
-      flex: 1 100%;
-      text-align: center;
-    }
-
-    .step-info {
-      flex: 2 100;
-      text-align: center;
-      justify-content: center;
-    }
-
-    .step-img {
-      flex: 0 32%;
-      margin-right: 0;
-      margin-top: 15px;
-      margin-bottom: 15px;
-    }
-
-    .step-text {
-      flex: 100%;
-    }
-
-  }
-
-  /* MEDIA QUERY FOR MOBILE PHONES AND SMALLER */
-  @media screen and (max-width: 575px) {
-    
-    .hero-form button {
-      width: 100%;
-    }
-
-    .header-form-button:hover {
-      background-color: #39a6b2;
-    }
-  
-    .section-title {
-      width: 95%;
-    }
-  
-    .intro p {
-      width: 100%;
-    }
-  
-    .trainer {
-      flex: 0 100%;
-    }
-  
-    .contact-info {
-      text-align: center;
-    }
-  
-    .contact-info > * {
-      flex: 0 100%;
-    }
-
-    .contact-form {
-      order: 3;
-    }
-  }
