--- a/Assets/style.css
+++ b/Assets/style.css
@@ -54,3 +54,16 @@ header nav ul {
   align-items: center;
   list-style: none;
 }
+
+header nav ul li a {
+  padding: 10px 15px;
+  font-weight: lighter;
+  font-size: 1.55vw;
+  color: var(--primary-color);
+}
+
+header nav ul li a:hover {
+  background: var(--primary-color);
+  color: var(--secondary-color);
+  border-radius: 15px;
+}
