--- a/Assets/style.css
+++ b/Assets/style.css
@@ -67,3 +67,45 @@ header nav ul li a:hover {
   color: var(--secondary-color);
   border-radius: 15px;
 }
+
+/* Footer Starts */
+
+footer {
+  background-color: var(--secondary-color);
+  width: 100%;
+  padding: 40px 35px;
+  justify-content: space-between;
+  flex-wrap: wrap;
+}
+
+.copyright {
+  color: var(--primary-color);
+  font-size: 28px;
+  margin: 0;
+}
+
+footer div {
+  line-height: 1.5;
+  text-align: center;
+}
+
+footer ul {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-evenly;
+  align-items: center;
+  list-style: none;
+}
+
+footer ul a {
+  padding: 10px 15px;
+  font-weight: lighter;
+  font-size: 22px;
+  color: var(--primary-color);
+}
+
+footer ul a:hover {
+  background: var(--primary-color);
+  color: var(--secondary-color);
+  border-radius: 15px;
+}
