--- a/Assets/style.css
+++ b/Assets/style.css
@@ -109,3 +109,42 @@ footer ul a:hover {
   color: var(--secondary-color);
   border-radius: 15px;
 }
+
+/*Meet Sarah Starts */
+.intro h2 {
+  font-size: 38px;
+  color: var(--primary-color);
+  padding-bottom: 15px;
+  text-align: center;
+  margin: 0 auto 35px auto;
+  width: 50%;
+}
+
+.intro h3 {
+  font-size: 28px;
+  color: var(--primary-color);
+  padding-bottom: 15px;
+  text-align: center;
+  margin: 0 auto 35px auto;
+  width: 50%;
+}
+
+.intro p {
+  margin: 0 auto;
+  line-height: 1.5;
+  color: var(--primary-color);
+  width: 80%;
+  font-size: 22px;
+  text-align: center;
+}
+
+
+.primary-border {
+  border-color: var(--fourth-color);
+}
+
+
+
+.flex-row {
+  display: flex;
+}
