--- a/Assets/style.css
+++ b/Assets/style.css
@@ -143,7 +143,40 @@ footer ul a:hover {
   border-color: var(--fourth-color);
 }
 
+/* Digital Marketing Skillsets */
+.skillset {
+  background-color: var(--secondary-color);
+}
 
+.skillsets {
+  width: 100%;
+  margin: 0;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-evenly;
+  background-color: var(--secondary-color);
+}
+
+.skillset h2 {
+  font-size: 38px;
+  color: var(--primary-color);
+  padding-bottom: 15px;
+  text-align: center;
+  margin: 0 auto 35px auto;
+  width: 50%;
+}
+
+.skillsets h3 {
+color: var(--primary-color);
+font-size: 25px;
+text-align: center;
+flex: 1 30%;
+}
+
+.skillsets img {
+width: 100;
+align-items: center;
+}
 
 .flex-row {
   display: flex;
