--- a/Assets/style.css
+++ b/Assets/style.css
@@ -20,7 +20,7 @@ body {
 /* Apply Styles to Header */
 header {
 padding: 20px 35px;
-background-color: var(--secondary-color);
+background-color: var(--primary-color);
 display: flex;
 justify-content: space-between;
 flex-wrap: wrap;
@@ -59,19 +59,31 @@ header nav ul li a {
   padding: 10px 15px;
   font-weight: lighter;
   font-size: 1.55vw;
-  color: var(--primary-color);
+  color: var(--secondary-color);
 }
 
 header nav ul li a:hover {
-  background: var(--primary-color);
-  color: var(--secondary-color);
+  background: var(--secondary-color);
+  color: var(--primary-color);
   border-radius: 15px;
+}
+
+.coding-projects {
+  display: grid;
+  grid-template-rows: 100%;
+  grid-template-columns: 60% 40%;
+  padding: 15px 15px 15px 15px;
+}
+
+.project-images {
+  width: 100%;
+  height: 100%;
 }
 
 /* Footer Starts */
 
 footer {
-  background-color: var(--secondary-color);
+  background-color: var(--primary-color);
   width: 100%;
   padding: 40px 35px;
   justify-content: space-between;
@@ -79,7 +91,7 @@ footer {
 }
 
 .copyright {
-  color: var(--primary-color);
+  color: var(--secondary-color);
   font-size: 28px;
   margin: 0;
 }
@@ -101,12 +113,12 @@ footer ul a {
   padding: 10px 15px;
   font-weight: lighter;
   font-size: 22px;
-  color: var(--primary-color);
+  color: var(--secondary-color);
 }
 
 footer ul a:hover {
-  background: var(--primary-color);
-  color: var(--secondary-color);
+  background: var(--secondary-color);
+  color: var(--primary-color);
   border-radius: 15px;
 }
 
