--- a/Assets/style.css
+++ b/Assets/style.css
@@ -69,10 +69,10 @@ header nav ul li a:hover {
 }
 
 .coding-projects {
-  display: grid;
-  grid-template-rows: 100%;
-  grid-template-columns: 60% 40%;
-  padding: 15px 15px 15px 15px;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-evenly;
+  align-items: center;
 }
 
 .project-images {
